--- a/Moim/Podfile
+++ b/Moim/Podfile
@@ -10,6 +10,7 @@ target 'Moim' do
   pod 'Alamofire'
   pod 'lottie-ios'
   pod 'GoogleSignIn'
+  pod 'FirebaseAnalytics'
   target 'MoimTests' do
     inherit! :search_paths
     # Pods for testing
